odontotheme/static/css/odonto.scss
// Variables
$odonto_blue: #487CBC;
$artichoke: #84A07C;
$rifle_green: #3C4939;
$cambridge_blue: #A3C9A8;
$black_coral: #595F72;
$gunmetal: #21232A;
$bone: #DDD8C4;
$error_red: #DE3C4B;

// Color and typography
.cambridge_blue {
    color: $cambridge_blue;
}
.bg-bone {
    background-color: $bone;
}

body {
    background-color: white;
    font-size: 18px;
    color: $gunmetal;
    overflow-y: hidden;
}

h1 {
    color: darken($odonto_blue, 8%);
}

h2 {
    color: $rifle_green;
}

h3 {
    font-size: 20px;
}

table {
    font-size: 16px;
}

a {
    color: $black_coral;
}

a:hover {
    color: darken($black_coral, 8%);
}

.form-control {
    color: $black_coral;
    border-radius: 0px;
}

.form-horizontal .control-label,
label{
  text-align: left;
  font-size: 18px;
  color: $black_coral;
  font-weight: normal;
}

.help-block {
    color: $error_red;
}

.btn {
    border-radius: 0px;
}

.btn.btn-radio-group{
    font-size: 18px;
    line-height: 24px;
    padding: 18px;
}

.btn.btn-checkbox {
  min-width: 40px;
  min-height: 40px;
  max-width: 40px;
  max-height: 40px;
  text-align: center;
  padding: 8px 0px 0px 0px;
}

.btn-default {
    color: $black_coral;

    &.active {
        background-color: $cambridge_blue;
        border-color: darken($cambridge_blue, 8%);
        color: $black_coral;
    }
}

.btn-error{
    .btn-default, .active.btn-default{
        background-color: $error_red;
        border-color: darken($error_red, 2%);
    }
}

.btn-primary.disabled {
    background-color: $black_coral;
    border-color: darken($black_coral, 2%);
    color: $bone;
}

.panel.panel-primary .panel-heading  .btn-primary,
.btn-primary,
.btn-primary:focus{
    background-color: $cambridge_blue;
    border-color: darken($cambridge_blue, 8%);
    color: $black_coral;
}

.panel.panel-primary .panel-heading  .btn-primary:hover,
.btn-primary:hover {
    color: $black_coral;
    font-weight: normal;
    background-color: darken($cambridge_blue, 8%);
}

.btn-secondary, .btn-secondary:hover, .btn-secondary:focus{
    background-color: $cambridge_blue;
    border-color: darken($cambridge_blue, 8%);
    color: $black_coral;
    font-weight: normal;
    font-size: 18px;
    line-height: 24px;
}

#episode-history h4 {
    color: white;
    text-decoration: underline;
    font-size: 16px;
}

#episode-history a {
    font-size: 16px;
    color: white;
    display: block;
}

#episode-history a:hover,
#episode-history a:visited,{
    color: white;
    font-size: 16px;
}

#episode-history a.bg-active {
    background-color: darken($odonto_blue, 8%);
}

// Layout and positioning
h1 {
    margin-top: 24px;
    margin-bottom: 36px;
}

h2 {
    margin-top: 24px;
    margin-bottom: 24px;
}

.offset-below {
    margin-bottom: 48px;
}

.form-horizontal .control-label,
label{
  padding-bottom: 8px;
}

.pathway-save-button .btn {
    margin-top: 32px;
    margin-left: -15px;
    margin-bottom: 64px;
}

.odonto-checkbox label.col-md-9 {
    padding-left: 0px;
}

#episode-history {
  position: fixed;
  left: 20px;
  top: 300px;
  margin-left: 25px;
  @media(max-width: 991px){
    display: none;
  }
}

#episode-history a{
    padding: 5px;
}

#logout {
    position: fixed;
    bottom: 0px;
}

.patient-detail-heading {
    margin-top: 110px;
}
.open-claim-button {
    margin-right: 12px;
}

// Unconverted
.form-control {
    font-size: 18px;
    height: 48px;
}
.btn-lg {
    padding: 6px 40px;
    font-size: 18px;
    font-weight: bold;
    border-radius: 2px;
}

.btn-default small{
  color: #DDD;
}

.navbar .container-fluid .navbar-brand {
    margin-left: -32px;
}

.navbar-default a.navbar-brand {
    color: white;
}
.navbar-default a.navbar-brand:hover {
    color: #eee;
}

.main-view{
    overflow-x: auto;
}

.navbar-default, .top-navbar {
    border-bottom: none;
}

.top-navbar {
    height: 90px;
    background-color: #487DBC;
}
.nav-bar-search .form-control {
    font-size: 16px;
    line-height: 16px;
    height: 32px;
}

.nav-bar-search:before {
    font-size: 16px;
}
.navbar-default .navbar-nav > li > a {
    color: white;
}
.navbar-brand img {
    height: 80px;
    margin-top: -15px;
}
#main-navbar {
    margin-top: 20px;
}
.ngProgressLiteBar {
    display: none;
}
.content-offset {
    margin-top: 100px
}
.pathway-offset {
    margin-top: 80px;
}

.nav-bar-links{
    margin-top: -5px;
}

.nav-bar-odonto-container{
  position: fixed;
  margin-top: -106px;
  z-index: 1040;
  left: 50%;
}
.nav-bar-odonto-title{
  margin-left: -50%;
  font-size: 24px;
  font-weight: 300;
  color: white;
}

.odonto-small-title{
  font-size: 18px;
  font-weight: 400;
  margin-top: 30px;
  margin-bottom: 30px;
}

.loading {
  background-color: white;
  height: 100%;
  position: fixed;
  width: 1100%;
  z-index: 100;
  padding-left: 0px;
  margin-left: -20px;
}
.pathway-process-steps-padding {
    margin-top: 60px;
}
.btn-choices button {
  width: 240px;
  height: 200px;
  border-radius: 4px;
  margin-bottom: 30px;
  background-color: rgb(212,212,212);
  color: white;
}

.btn-choices button.active {
  background-color:  rgb(72, 124, 188)
}


.odonto-list {
    margin-top: 90px;
    padding: 20px;
}

.patient-detail-heading h1,
.patient-detail-heading h1 small {
    color: rgb(72, 124, 188);

}
.panel.panel-primary .panel-heading{
    color: black;
}

.odonto-detail {
    margin-top: 100px;
/*     background-color: firebrick */
}
.odonto-detail h2 {
    padding-bottom: 20px;
}

.odonto-detail .panel-default {
    border: none;
}

.panel-primary .panel-default .panel-heading,
.panel-default .panel-heading {
    border-bottom: 3px solid rgb(72, 124, 188);
}

.search-panel.panel.panel-primary .panel-heading {
  background-color: transparent;
  border-bottom: 3px solid rgb(72, 124, 188);
}
.modal-header{
    background-color: rgb(72, 124, 188);
}


.panel.panel-primary .panel-heading {
    background-color: transparent;
    border-bottom: 3px solid rgb(72, 124, 188);
}

.navbar-brand {
    padding-left: 50px;
}

#side-nav {
  background-color: #487DBC;
  height: 100vh;

  @media(max-width: 991px){
    display: none;
  }
}
#side-nav ul.app-info {
  padding-top: 120px;
  padding-bottom: 30px;
}
.app-info li {
  padding-left: 32px;
  color: white;
}

#side-nav {
    background-color: $odonto_blue;
    position: fixed;

    .navbar-nav{
        width: 100%;
    }

    ul.nav li{
        float: none;

        i {
            padding-right: 4px;
        }

        a{
            padding-left: 26px;
        }

        .badge{
            float: right;
            background-color: white;
            color: #124c91;
        }

        &:hover a, a:hover, &:hover{
            background-color: #2c64a8;
            color: white;
            cursor: pointer;
        }

        &.active, &.active a{
            background-color: #124c91;
        }
    }

    hr {
        margin-left: 5%
    }

    a{
        color: white;
    }
}


.outer-container {
  overflow-y: scroll;
  height: 100vh;
}

.no-touchevents .panel-heading i.edit, .list-group-item i.edit, .list-group-item i.delete {
  display: block;
  color: #ccc;
}

.touchevents .panel-heading i.edit,
.touchevents .panel-heading i.delete,
.panel-heading:hover i.edit,
.list-group-item:hover i.edit,
.list-group-item:hover i.delete{
  color: black;
  cursor: pointer;
}

.btn.btn-default small{
  color: #CCC;
}

.btn.btn-default small{
  color: #CCC;
}

.panel-margin{
  padding-left: 15px;
}


table.patient-list {
  font-size: 16px;
}

.panel {
  border: none;
  background: none;
  box-shadow: none;
  border-radius: 0px;
}
.panel-footer {
    background: none;
}

.panel.panel-primary .panel-heading.pathway-header{
  background: none;
  border-color:  rgb(72, 124, 188);
}

.dental-chart .right {
    float: right;
}
.chart-tooth {
    float: left;
}
.chart-tooth label.notation {
    display: block;
    border: 1px solid #ccc;
    padding: 0px;
    margin-top: 1px;
    text-align: center;
}
.btn.btn-tooth {
  min-width: 40px;
  min-height: 40px;
  max-width: 40px;
  max-height: 40px;
  text-align: center;
  padding: 8px 0px 0px 0px;
}

